# ml-property-pricing-api

./: .gitignore  Dockerfile  README.en.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py
app/api/: __init__.py  predict.py
app/schemas/: __init__.py  prediction.py
app/services/: __init__.py  predictor.py
notebooks/: 01-exploration-and-modeling.ipynb
scripts/: __init__.py  constants.py  train.py
tests/: __init__.py  test_api.py  test_model.py
utils/: logger.py
